# ai-test

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PROJECT_LAUNCH_SUMMARY.md  PROJECT_SUMMARY.md  README.md  SUMMARY.md  TESTING_SUMMARY.md  docker-compose.prod.yml  docker-compose.yml  jest.config.js  nginx.conf  package-lock.json  package.json  setup-dev.sh  vite.config.ts
.claude/: settings.local.json
backend/: Cargo.toml
backend/migrations/: 001_initial_schema.sql  001_initial_schema_mysql.sql
backend/src/: lib.rs  main.rs  vyos_client.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/error/: mod.rs
backend/src/handlers/: auth.rs  config.rs  health.rs  mod.rs  monitoring.rs  network.rs  node.rs  system.rs  user.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: auth.rs  config.rs  mod.rs  monitoring.rs  network.rs  node.rs  system.rs  user.rs
backend/src/services/: auth.rs  auth_service.rs  config.rs  mod.rs  monitoring.rs  network.rs  network_service.rs  node_service.rs  system_service.rs  user.rs  user_service.rs  vyos_api.rs
backend/src/websocket/: mod.rs
backend/tests/: README.md  integration_tests.rs  unit_tests.rs  verify_api_endpoints.sh
docs/: PROJECT_SUMMARY.md  README.md  api_documentation.md  architecture_design.md  authentication-system.md  backend_test_report.md  best_practices.md  database_schema.md  deployment_guide.md  developer_guide.md  development_guide.md  development_guidelines.md  docker_guide.md  foundation_phase_plan.md  frontend_test_report.md  implementation_strategy.md  progress_report.md  project_overview.md  project_plan.md  project_status_report.md  project_status_summary.md  technical_specification.md  technical_specifications.md  test_plan.md  user_guide.md  user_manual.md
frontend/: .eslintrc.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/services/: AuthService.ts  ConfigService.ts  MonitoringService.ts  NodeService.ts  SystemService.ts  UserManagementService.ts
frontend/src/stores/: authStore.ts  configStore.ts  dashboardStore.ts  nodeStore.ts  systemStore.ts  userManagementStore.ts
frontend/src/utils/: common.ts
frontend/tests/: README.md  e2e.spec.ts  integration.test.tsx  setup.ts  unit.test.tsx
src/: App.tsx  index.tsx
src/__tests__/: authService.test.tsx  networkConfigService.test.tsx
src/__tests__/contexts/: AuthContext.test.tsx
src/components/: ProtectedRoute.tsx  UnauthorizedPage.tsx
src/components/Auth/: LoginForm.tsx  LogoutButton.tsx  RegisterForm.tsx  SessionManager.tsx
src/components/Dashboard/: Dashboard.tsx
src/components/Layout/: Header.tsx  Sidebar.tsx
src/components/Monitoring/: AlertManager.tsx  MonitoringDashboard.tsx  NetworkTraffic.tsx  SystemMetrics.tsx  VyOSAlertManager.tsx  VyOSAlertsChart.tsx  VyOSMetricsChart.tsx  VyOSMonitoringDashboard.tsx  VyOSNetworkTraffic.tsx  VyOSNetworkTrafficChart.tsx  VyOSSystemMetrics.tsx
src/components/NetworkConfig/: FirewallComponent.tsx  InterfacesComponent.tsx  NetworkConfigInterface.tsx  RoutingComponent.tsx  (+1 more)
src/contexts/: AuthContext.tsx
src/hooks/: useMonitoring.ts
src/pages/: LoginPage.tsx  MonitoringPage.tsx  NetworkConfigPage.tsx
src/services/: apiClient.ts  authService.ts  networkConfigService.ts
src/types/: vyos-api.ts
src/utils/: authUtils.ts  networkUtils.ts
(+69 files in other folders)
