[package]
name = "vyos-web-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws", "multipart", "headers"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "mysql", "chrono", "uuid", "migrate"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }
regex = "1.0"
futures = "0.3"
tower = { version = "0.4", features = ["cors", "trace"] }
tower-http = { version = "0.5", features = ["cors", "fs", "trace", "auth"] }
thiserror = "1.0"
dotenv = "0.15"
lazy_static = "1.4"
rand = "0.8"
bytes = "1.0"

[dev-dependencies]
axum-test = "16.1"