[package]
name = "vyos-web-ui-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7"
actix-rt = "2.9"

# Database ORM
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "mysql", "sqlite", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"

# HTTP Client
reqwest = { version = "0.11", features = ["json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Input validation
validator = { version = "0.16", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# WebSocket support
actix-ws = "0.1"
futures = "0.3"

# Async trait support
async-trait = "0.1"

# Environment
env_logger = "0.11"